--- a/.gitignore
+++ b/.gitignore
@@ -103,7 +103,7 @@ dmypy.json
 .pyre/
 
 ### VisualStudioCode ###
-.vscode/*
+.vscode/
 
 ### VisualStudioCode Patch ###
 # Ignore all local history of files
